# build_lib

./: README.md  build.sh  notice.txt  动态库制作.xmind
build_comlib/: CMakeLists.txt  buildComLib.sh  comlib_config  common.sh  single_build.sh
build_comlib/StiBel/: CMakeLists.txt
build_comlib/StiBel/Common/: CMakeLists.txt
build_comlib/StiBel/Common/Config/: CMakeLists.txt
build_comlib/StiBel/Common/Config/samples/: CMakeLists.txt
build_comlib/StiBel/Common/Config/src/: Config.cpp  ConfigFile.cpp  ConfigLoader.cpp  ConfigManager.cpp~
build_comlib/StiBel/Common/Config/test/: CMakeLists.txt
build_comlib/StiBel/Common/Foundation/: CMakeLists.txt
build_comlib/StiBel/Common/Foundation/samples/: CMakeLists.txt
build_comlib/StiBel/Common/Foundation/src/: Exception.cpp  TEncode.cpp  ThreadPool.cpp
build_comlib/StiBel/Common/Foundation/test/: CMakeLists.txt
build_comlib/StiBel/Common/include/StiBel/: Condition.h  CppUnitDefine.h  Exception.h  Mutex.h  MutexLock.h  Noncopyable.h  TEncode.h  Util.h
build_comlib/StiBel/Common/src/: Config.cpp  ConfigFile.cpp  ConfigLoader.cpp  Exception.cpp  TEncode.cpp  ThreadPool.cpp  Util.cpp
build_comlib/StiBel/Common/test/: CMakeLists.txt
build_comlib/StiBel/Common/test/source/: ConfigLoaderTest.cpp  ConfigTest.cpp  ThreadPoolTest.cpp
build_comlib/StiBel/Data/: CMakeLists.txt
build_comlib/StiBel/Data/MySQL/: CMakeLists.txt
build_comlib/StiBel/Data/MySQL/src/: MySQL.cpp
build_comlib/StiBel/Data/MySQL/test/: CMakeLists.txt
build_comlib/StiBel/Data/Redis/: CMakeLists.txt
build_comlib/StiBel/Data/Redis/src/: CMyRedis.cpp  Redis.cpp
build_comlib/StiBel/Data/Redis/test/: CMakeLists.txt
build_comlib/StiBel/JSON/: CMakeLists.txt
build_comlib/StiBel/JSON/samples/: CMakeLists.txt
build_comlib/StiBel/JSON/samples/source/: JSONExceptionSample.cpp  JsonUtilSample.cpp
build_comlib/StiBel/JSON/src/: JSONException.cpp  JsonUtil.cpp
build_comlib/StiBel/JSON/test/: CMakeLists.txt
build_comlib/StiBel/JSON/test/source/: JSONExceptionTest.cpp  JsonUtilTest.cpp
build_comlib/StiBel/Log/: CMakeLists.txt
build_comlib/StiBel/Log/samples/: CMakeLists.txt
build_comlib/StiBel/Log/samples/include/: sort.h
build_comlib/StiBel/Log/samples/source/: sort.cpp
build_comlib/StiBel/Log/src/: LogException.cpp  LoggerManager.cpp
build_comlib/StiBel/Log/test/: CMakeLists.txt
build_comlib/StiBel/Log/test/source/: LogTest.cpp
build_comlib/StiBel/Test/: CMakeLists.txt
build_comlib/StiBel/Test/samples/: CMakeLists.txt
build_comlib/StiBel/Test/samples/source/: YAMLSample.cpp
build_comlib/StiBel/Test/src/: CommonTest.cpp  stub_glibc.cpp
build_comlib/StiBel/Test/test/source/: YamlUtilTest.cpp
build_comlib/StiBel/Util/: CMakeLists.txt
build_comlib/StiBel/Util/samples/: CMakeLists.txt
build_comlib/StiBel/Util/samples/source/: UtilSample.cpp
build_comlib/StiBel/Util/src/: Util.cpp
build_comlib/StiBel/Util/test/: CMakeLists.txt
build_comlib/StiBel/Util/test/source/: UtilTest.cpp
build_comlib/StiBel/XML/: CMakeLists.txt
build_comlib/StiBel/XML/samples/: CMakeLists.txt
build_comlib/StiBel/XML/samples/source/: XMLSample.cpp
build_comlib/StiBel/XML/src/: XmlUtil.cpp
build_comlib/StiBel/XML/test/: CMakeLists.txt
build_comlib/StiBel/XML/test/source/: XmlUtilTest.cpp
build_comlib/StiBel/Xml/: CMakeLists.txt
build_comlib/StiBel/Xml/src/: XmlUtil.cpp
build_comlib/StiBel/YAML/: CMakeLists.txt
build_comlib/StiBel/YAML/samples/: CMakeLists.txt
build_comlib/StiBel/YAML/src/: YamlUtil.cpp
build_comlib/StiBel/YAML/test/: CMakeLists.txt
build_comlib/StiBel/YAML/test/source/: YamlUtilTest.cpp
examples/: CMakeLists.txt
examples/cmake/: 3partlib.cmake  Find3partlib.cmake  FindComlib.cmake  FindStiBel.cmake  StiBel.cmake  colors.cmake  comlib.cmake  linklib.cmake  message.cmake  options.cmake  toolchain.cmake
examples/cmake/drogon_use/: use.txt
examples/conf/etc/ld.so.conf.d/: mylib.conf  stibel.conf
examples/examples/: CMakeLists.txt
examples/examples/3partlib/: CMakeLists.txt
examples/examples/3partlib/cppunit/: CMakeLists.txt
examples/examples/3partlib/cppunit/include/: SimpleTest.h
examples/examples/3partlib/cppunit/source/: SimpleTest.cpp  main.cpp
examples/examples/3partlib/drogon/: CMakeLists.txt  test.sh
examples/examples/3partlib/fastcgi/: CMakeLists.txt
examples/examples/3partlib/fastcgi/source/: main.cpp
examples/examples/3partlib/googletest/: CMakeLists.txt
examples/examples/3partlib/googletest/include/: UserCurrent.h
examples/examples/3partlib/googletest/source/: UserCurrent.cpp
examples/examples/3partlib/googletest/test/: CMakeLists.txt
examples/examples/3partlib/grpc/: CMakeLists.txt  notice.txt
examples/examples/3partlib/hiredis/: CMakeLists.txt
examples/examples/3partlib/hiredis/include/: CErrorMsg.h  CMyRedis.h
examples/examples/3partlib/hiredis/source/: CErrorMsg.cpp  CMyRedis.cpp  main.cpp
examples/examples/3partlib/jsoncpp/: CMakeLists.txt
examples/examples/3partlib/jsoncpp/include/: JsonUtil.h
examples/examples/3partlib/jsoncpp/source/: JsonUtil.cpp  main.cpp
examples/examples/3partlib/log4cpp/: CMakeLists.txt
examples/examples/3partlib/log4cpp/include/: LoggerManager.h  randomArray.h  sort.h
examples/examples/3partlib/log4cpp/source/: LoggerManager.cpp  main.cpp  randomArray.cpp
examples/examples/3partlib/poco/: CMakeLists.txt
examples/examples/3partlib/poco/include/: LocalDateTimeTest.h  UUIDTest.h  XmlTest.h
examples/examples/3partlib/poco/source/: main.cpp  testPoco.cpp
examples/examples/3partlib/protobuf/: CMakeLists.txt  game.proto  person.proto  use.txt
examples/examples/3partlib/protobuf/source/: main.cpp  testProtobuf.cpp
examples/examples/3partlib/redis/: CMakeLists.txt
examples/examples/3partlib/tinyxml/: CMakeLists.txt
examples/examples/3partlib/yamlcpp/: CMakeLists.txt  yamlcpp.md
examples/examples/3partlib/zeromq/: CMakeLists.txt
examples/examples/comlib/: CMakeLists.txt
examples/examples/comlib/StiBel/: CMakeLists.txt
examples/examples/global/jsoncpp/: CMakeLists.txt
examples/shell/: verify_result.sh
(+135 files in other folders)
