#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMLIB_TEST_OUTPUT_PATH}/Common)

#头文件目录
INCLUDE_DIRECTORIES(${GOOGLETEST_INCLUDE} ${STIBEL_COMMON_INCLUDE} ${JSONCPP_INCLUDE} ${XML_INCLUDE} ${YAML_INCLUDE} ./include )

#目录源码路径
SET( COMMON_TEST_SRC_DIR ./source )

#代码列表
FILE (GLOB COMMON_TEST_FILES ${COMMON_TEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(COMMON_TEST_LIB ${LIB_GOOGLETEST} ${LIB_STIBEL_COMMON} ${LIB_PTHREAD} ${LIB_JSONCPP} ${LIB_YAMLCPP} ${LIB_TINYXML})

#生成 
ADD_EXECUTABLE( CommonTest ${COMMON_TEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( CommonTest ${COMMON_TEST_LIB})