#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMLIB_TEST_OUTPUT_PATH}/JSON/samples)

#头文件目录
INCLUDE_DIRECTORIES(${STIBEL_COMMON_FOUNDATION_INCLUDE} ${STIBEL_JSON_INCLUDE} ${JSON_INCLUDE} ./include )

#依赖的LIB
SET(STIBEL_JSON_TEST_LIB  ${LIB_STIBEL_COMMON_FOUNDATION} ${LIB_PTHREAD} ${LIB_STIBEL_JSON} ${LIB_JSONCPP})

#生成 
ADD_EXECUTABLE( JSONExceptionSample ./source/JSONExceptionSample.cpp)

#连接生成相关库
TARGET_LINK_LIBRARIES( JSONExceptionSample ${STIBEL_JSON_TEST_LIB} )

#生成 
ADD_EXECUTABLE( JsonUtilSample ./source/JsonUtilSample.cpp)

#连接生成相关库
TARGET_LINK_LIBRARIES( JsonUtilSample ${STIBEL_JSON_TEST_LIB} )