#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMLIB_TEST_OUTPUT_PATH}/JSON)

#头文件目录
INCLUDE_DIRECTORIES(${GOOGLETEST_INCLUDE} ${STIBEL_COMMON_INCLUDE} ${JSON_INCLUDE} ${TINYXML_INCLUDE} ${YAML_INCLUDE} ./include )

#目录源码路径
SET( JSON_TEST_SRC_DIR ./source )

#代码列表
FILE (GLOB JSON_TEST_FILES ${JSON_TEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(JSON_TEST_LIB ${LIB_GOOGLETEST} ${LIB_STIBEL_COMMON} ${LIB_STIBEL_JSON} ${LIB_JSONCPP} ${LIB_YAMLCPP} ${LIB_TINYXML})

#生成 
ADD_EXECUTABLE( JsonTest ${JSON_TEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( JsonTest ${JSON_TEST_LIB})