#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMLIB_TEST_OUTPUT_PATH}/Log/test)

#头文件目录
INCLUDE_DIRECTORIES(${GOOGLETEST_INCLUDE} ${STIBEL_COMMON_FOUNDATION_INCLUDE} ${LOG4CPP_INCLUDE} ./include )

#目录源码路径
SET( LOG_TEST_SRC_DIR ./source )

#代码列表
FILE (GLOB LOG_TEST_FILES ${LOG_TEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(LOG_TEST_LIB ${LIB_GOOGLETEST} ${LIB_STIBEL_COMMON_FOUNDATION} ${LIB_STIBEL_LOG} ${LIB_LOG4CPP})

#生成 
ADD_EXECUTABLE( LogTest ${LOG_TEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( LogTest ${LOG_TEST_LIB})