#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${STIBEL_SAMPLES_OUTPUT_PATH}/YAML)

#头文件目录
INCLUDE_DIRECTORIES(${YAMLCPP_INCLUDE} ./include )

#依赖的LIB
SET(STIBEL_YAML_TEST_LIB ${LIB_STIBEL_YAML} ${LIB_YAMLCPP})

#生成 
ADD_EXECUTABLE( YAMLSample ./source/YAMLSample.cpp)

#连接生成相关库
TARGET_LINK_LIBRARIES( YAMLSample ${STIBEL_YAML_TEST_LIB} )
