#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMLIB_TEST_OUTPUT_PATH}/Util/test)

#头文件目录
INCLUDE_DIRECTORIES(${GOOGLETEST_INCLUDE} ${STIBEL_UTIL_INCLUDE} ./include )

#目录源码路径
SET( UTIL_TEST_SRC_DIR ./source )

#代码列表
FILE (GLOB UTIL_TEST_FILES ${UTIL_TEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(UTIL_TEST_LIB ${LIB_GOOGLETEST} ${LIB_STIBEL_UTIL} )

#生成 
ADD_EXECUTABLE( UtilTest ${UTIL_TEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( UtilTest ${UTIL_TEST_LIB})