#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${STIBEL_SAMPLES_OUTPUT_PATH}/XML)

#头文件目录
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE}  ./include )

#依赖的LIB
SET(STIBEL_XML_TEST_LIB ${LIB_STIBEL_XML} ${LIB_TINYXML})

#生成 
ADD_EXECUTABLE( XMLSample ./source/XMLSample.cpp)

#连接生成相关库
TARGET_LINK_LIBRARIES( XMLSample ${STIBEL_XML_TEST_LIB} )
