#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${STIBEL_TEST_OUTPUT_PATH}/XML)

#头文件目录
INCLUDE_DIRECTORIES(${GOOGLETEST_INCLUDE} ${TINYXML_INCLUDE} ${STIBEL_TEST_INCLUDE} ./include )

#目录源码路径
SET( XML_TEST_SRC_DIR ./source )

#代码列表
FILE (GLOB XML_TEST_FILES ${XML_TEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(XML_TEST_LIB ${LIB_GOOGLETEST} ${LIB_STIBEL_XML} ${LIB_STIBEL_TEST} ${LIB_TINYXML})

#生成 
ADD_EXECUTABLE( XmlTest ${XML_TEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( XmlTest ${XML_TEST_LIB})