#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${STIBEL_TEST_OUTPUT_PATH}/YAML)

#头文件目录
INCLUDE_DIRECTORIES(${GOOGLETEST_INCLUDE} ${YAMLCPP_INCLUDE} ./include )

#目录源码路径
SET( YAML_TEST_SRC_DIR ./source )

#代码列表
FILE (GLOB YAML_TEST_FILES ${YAML_TEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(YAML_TEST_LIB ${LIB_GOOGLETEST} ${LIB_STIBEL_YAML} ${LIB_YAMLCPP})

#生成 
ADD_EXECUTABLE( YamlTest ${YAML_TEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( YamlTest ${YAML_TEST_LIB})