#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${3PARTLIB_EXECUTABLE_OUTPUT_PATH}/cppunit)

#头文件目录
INCLUDE_DIRECTORIES( ${CPPUNIT_INCLUDE} ${STIBEL_COMMON_FOUNDATION_INCLUDE} ./include )

#目录源码路径
SET( CPPUNITTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB CPPUNITTEST_FILES ${CPPUNITTEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(CPPUNITTEST_LIB  ${LIB_CPPUNIT} ${LIB_STIBEL_COMMON_FOUNDATION} ${LIB_PTHREAD})

#生成 
ADD_EXECUTABLE( SimpleTest ${CPPUNITTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( SimpleTest ${CPPUNITTEST_LIB} )
