#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${3PARTLIB_EXECUTABLE_OUTPUT_PATH}/hiredis)

#头文件目录
INCLUDE_DIRECTORIES( ${HIREDIS_INCLUDE}  ./include )

#目录源码路径
SET( HIREDISTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB HIREDISTEST_FILES ${HIREDISTEST_SRC_DIR}/*.cpp )

#依赖的LIB
SET(HIREDISTEST_LIB ${LIB_HIREDIS})

#生成 
ADD_EXECUTABLE( hiredis_Test ${HIREDISTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( hiredis_Test ${HIREDISTEST_LIB} )