#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${3PARTLIB_EXECUTABLE_OUTPUT_PATH}/poco)

#头文件目录
INCLUDE_DIRECTORIES( ${POCO_INCLUDE}  ./include )

#目录源码路径
SET( POCOTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB POCO_FILES ${POCOTEST_SRC_DIR}/*.cpp )

#依赖的LIB
SET(POCOTEST_LIB ${LIB_POCO})

#生成 
ADD_EXECUTABLE( pocoTest ${POCO_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( pocoTest ${POCOTEST_LIB} )