#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${3PARTLIB_EXECUTABLE_OUTPUT_PATH}/redis)

#头文件目录
INCLUDE_DIRECTORIES( ${HIREDIS_INCLUDE}  ./include )

#目录源码路径
SET( REDISTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB REDISTEST_FILES ${REDISTEST_SRC_DIR}/*.cpp )

#依赖的LIB
SET(REDISTEST_LIB ${LIB_HIREDIS})

#生成 
ADD_EXECUTABLE( redis_Test ${REDISTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( redis_Test ${REDISTEST_LIB} )