#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${3PARTLIB_EXECUTABLE_OUTPUT_PATH}/yamlcpp)

#头文件目录
INCLUDE_DIRECTORIES( ${YAMLCPP_INCLUDE} ${STIBEL_COMMON_FOUNDATION_INCLUDE} ${STIBEL_UTIL_INCLUDE} ./include )

#目录源码路径
SET( YAMLCPPTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB YAMLCPPTEST_FILES ${YAMLCPPTEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(YAMLCPPTEST_LIB  ${LIB_YAMLCPP} ${LIB_STIBEL_COMMON_FOUNDATION} ${LIB_PTHREAD} ${LIB_STIBEL_UTIL})

#生成 
ADD_EXECUTABLE( yamlcppTest ${YAMLCPPTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( yamlcppTest ${YAMLCPPTEST_LIB} )
